--- a/tests/fixtures/sparql/update-query.sparql.njk
+++ b/tests/fixtures/sparql/update-query.sparql.njk
@@ -12,31 +12,31 @@ PREFIX rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#>
 {% if operation === 'INSERT' %}
 INSERT DATA {
   {% for triple in insertTriples %}
-  {{ triple.subject | rdfResource }} {{ triple.predicate | rdfProperty }} {{ triple.object | rdfValue }} .
+  {{ triple.subject | rdfResource }} {{ triple.predicate | rdfPropertyFilter }} {{ triple.object | rdfValue }} .
   {% endfor %}
 }
 
 {% elif operation === 'DELETE' %}
 DELETE DATA {
   {% for triple in deleteTriples %}
-  {{ triple.subject | rdfResource }} {{ triple.predicate | rdfProperty }} {{ triple.object | rdfValue }} .
+  {{ triple.subject | rdfResource }} {{ triple.predicate | rdfPropertyFilter }} {{ triple.object | rdfValue }} .
   {% endfor %}
 }
 
 {% elif operation === 'DELETE_INSERT' %}
 DELETE {
   {% for triple in deleteTriples %}
-  {{ triple.subject | sparqlVar }} {{ triple.predicate | rdfProperty }} {{ triple.object | sparqlVar }} .
+  {{ triple.subject | sparqlVar }} {{ triple.predicate | rdfPropertyFilter }} {{ triple.object | sparqlVar }} .
   {% endfor %}
 }
 INSERT {
   {% for triple in insertTriples %}
-  {{ triple.subject | sparqlVar }} {{ triple.predicate | rdfProperty }} {{ triple.object | sparqlValue }} .
+  {{ triple.subject | sparqlVar }} {{ triple.predicate | rdfPropertyFilter }} {{ triple.object | sparqlValue }} .
   {% endfor %}
 }
 WHERE {
   {% for pattern in wherePatterns %}
-  {{ pattern.subject | sparqlVar }} {{ pattern.predicate | rdfProperty }} {{ pattern.object | sparqlValue }} .
+  {{ pattern.subject | sparqlVar }} {{ pattern.predicate | rdfPropertyFilter }} {{ pattern.object | sparqlValue }} .
   {% endfor %}
   
   {% if filters %}
