--- a/tests/fixtures/sparql/example-with-frontmatter.sparql.njk
+++ b/tests/fixtures/sparql/example-with-frontmatter.sparql.njk
@@ -26,7 +26,7 @@ PREFIX rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#>
 SELECT{% if distinct %} DISTINCT{% endif %} {% for var in variables %}{{ var | sparqlVar }}{% if not loop.last %} {% endif %}{% endfor %}
 WHERE {
   {% for pattern in patterns %}
-  {{ pattern.subject | sparqlVar }} {{ pattern.predicate | rdfProperty }} {{ pattern.object | sparqlValue }} .
+  {{ pattern.subject | sparqlVar }} {{ pattern.predicate | rdfPropertyFilter }} {{ pattern.object | sparqlValue }} .
   {% endfor %}
   
   {% if filters %}
@@ -38,7 +38,7 @@ WHERE {
   {% if optionalPatterns %}
   {% for optional in optionalPatterns %}
   OPTIONAL {
-    {{ optional.subject | sparqlVar }} {{ optional.predicate | rdfProperty }} {{ optional.object | sparqlValue }} .
+    {{ optional.subject | sparqlVar }} {{ optional.predicate | rdfPropertyFilter }} {{ optional.object | sparqlValue }} .
   }
   {% endfor %}
   {% endif %}
@@ -49,7 +49,7 @@ WHERE {
     {% if not loop.first %}UNION{% endif %}
     {
       {% for pattern in union %}
-      {{ pattern.subject | sparqlVar }} {{ pattern.predicate | rdfProperty }} {{ pattern.object | sparqlValue }} .
+      {{ pattern.subject | sparqlVar }} {{ pattern.predicate | rdfPropertyFilter }} {{ pattern.object | sparqlValue }} .
       {% endfor %}
     }
     {% endfor %}
